argocd/homebox/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homebox
  name: homebox

spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: homebox
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: homebox
      annotations:
        backup.velero.io/backup-volumes: data,storage
    spec:
      containers:
        - env:
            - name: HBOX_LOG_LEVEL
              value: debug
            - name: HBOX_LOG_FORMAT
              value: text
            - name: HBOX_WEB_MAX_UPLOAD_SIZE
              value: "100"
            - name: HBOX_ALLOW_REGISTRATION
              value: "false"
            - name: HBOX_OIDC_ENABLED
              value: "true"
            - name: HBOX_OPTIONS_TRUST_PROXY
              value: "true"
            - name: HBOX_OPTIONS_HOSTNAME
              value: homebox.yanello.net
            - name: HBOX_OIDC_SCOPES
              value: openid profile email groups
            - name: HBOX_OPTIONS_ALLOW_LOCAL_LOGIN
              value: "true"
          image: harbor.yanello.net/ghcr/sysadminsmedia/homebox:0.26.2@sha256:b1ad7e3c63f732a5f6daa466e8116be4f545b3b120383a64dcb62beb00a660cc
          imagePullPolicy: IfNotPresent
          name: homebox
          resources:
            limits:
              memory: 500Mi
            requests:
              cpu: 25m
              memory: 50Mi
          ports:
            - containerPort: 7745
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: storage
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: 7745
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: 7745
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: storage
