argocd/homebox/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Homebox
    gethomepage.dev/icon: homebox
    gethomepage.dev/description: 'HomeBox is the inventory and organization system
      built for the Home User!'
    gethomepage.dev/pod-selector: app=homebox
  labels:
    app.kubernetes.io/instance: homebox-app
  name: homebox-http-route
  namespace: homebox
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - homebox.yanello.net
  rules:
    - backendRefs:
        - name: homebox
          namespace: homebox
          port: 7745
