argocd/homebox/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homebox
spec:
  endpointSelector:
    matchLabels:
      app: homebox
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "7745"
              protocol: TCP
  egress:
    - toFQDNs:
        - matchName: authentik.yanello.net
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
